hphp/hack/test/typecheck/constraint_gen5.php.exp
File "constraint_gen5.php", line 12, characters 7-11:
Cyclic class definition : Equal  (Typing[4013])
